<resources>
    <string name="app_name">PackageTracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_1_fragment">Tab 1</string>
    <string name="tab_2_fragment">Tab 2</string>
    <string name="french">French</string>
    <string name="day_time_night_time">Day Time/Night Time</string>
    <string name="german">German</string>
    <string name="languages">Languages:</string>
    <string name="settings">Settings</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="search">Search</string>
    <string name="please_enter_your_tracking_number_above_and_hit_search">Please Enter Your Tracking Number Above and Hit Search</string>
    <string name="help_tip">Please click the search button multiple times to get the info to display</string>


</resources>