<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab1Fragment">

    <Button
        android:id="@+id/searchButton"
        android:layout_width="226dp"
        android:layout_height="52dp"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:onClick="getData"
        android:text="@string/search"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackingText" />

    <EditText
        android:id="@+id/trackingText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/helpView"
        android:layout_width="337dp"
        android:layout_height="36dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="157dp"
        android:text="@string/please_enter_your_tracking_number_above_and_hit_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayView" />

    <TextView
        android:id="@+id/helpView2"
        android:layout_width="337dp"
        android:layout_height="36dp"
        android:layout_marginStart="44dp"
        android:text="@string/help_tip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpView"
        app:layout_constraintVertical_bias="0.14" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="107dp"
        android:layout_height="68dp"
        android:src="@drawable/ic_pin_foreground"
        app:layout_constraintBottom_toTopOf="@+id/trackingText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/displayView"
        android:layout_width="292dp"
        android:layout_height="186dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="258dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/helpView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>